[FIXED] scrollbar

--- a/style_ege_page.css
+++ b/style_ege_page.css
@@ -1,47 +1,38 @@
 .body_ege{
     min-height: 100vh;
-    margin: 0;
     font-size: 20px;
     overflow-x: hidden;
     
 }
 
-.card{
-  
-    box-shadow: 10px 5px 5px red;
-    width: 400px;
-    height: auto;
-    margin-right: 20px;
-    
-    align-items: center;
-    justify-content: center;
-    white-space: nowrap;
-    
-    
-}
 .card-title{
-    margin-top: 10px;
-    color: red;
+    
+    color: rgb(255, 255, 255);
     background: #EEEEED55;
-
-    border: 2px solid red;
+    border: 2px solid rgb(174, 0, 255);
+    border-radius: 6px;
+    text-align: center;
+    text-shadow: 1px 1px 3px rgb(174, 0, 255);
+    font-weight: 600;
+    font-size: 3rem;
     
 }
 p.card-text::first-letter{
     text-transform: capitalize;
     font-size: 1.3rem;
-    margin-left: 5px;
-    color: red;
+    margin-left: 0.5rem;
+    color: rgba(255, 255, 255, 0.81);
 
 }
 
 p.card-text{
-    line-height: 110%;
-    height: 100%;
+    font-size: 1.5rem;
+    height: 80%;
     width: 100%;
     align-items: center;
     display: flex;
-   
+    text-align: left;
+    color: rgba(255, 255, 255, 0.805);
 }
 
 
@@ -50,38 +41,12 @@ p.card-text{
 }
 
 
-
-
-.reel{
-    height: 300px;
-    width: 100vw;
-    border: 1px solid rgb(0, 0, 0);
-    overflow-x: scroll;
-    overflow-y: hidden;
-    white-space: nowrap;
-    user-select: none;
-    cursor: pointer;
-    transition: all 0.2s;
-    transform: scale(0.98);
-    will-change: transform;
-    position: relative;
-    
-    font-size: 20px;
-    display: flex;
-    
-} 
-
-.reel.active {
-    
-    cursor: grabbing;
-    cursor: -webkit-grabbing;
-    transform: scale(1);
-  }
 .ege_page li>p{
 
     
     text-align: left;
     line-height: 30px;
+    
     color: white; 
     height: 100%;
     width: 100%;
@@ -95,5 +60,44 @@ p.card-text{
 .ege_page li>p::first-letter{
     
     margin-left: 7px;
+    
+}
+.slider{
+    
+    width: 100%;
+    height: 30rem;
+    overflow: hidden;
+    display: block;
+  
+}
+
+.slider-inner{
+    position: relative;
+    top: 0;
+    left: 0px;
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 4rem;
+    pointer-events: none;
+    transition: 0.1s ease-out;
+    margin-left: 10px ;
+}
+
+.block{
+    height: 100%;
+    background-color: rgba(128, 128, 128, 0.153);
+    border-radius: 10px;
+    border:1px  solid rgb(174, 0, 255);
+    padding: 1.5rem;
+    list-style: none;
+    user-select: none;
+
+    box-shadow: 10px 5px 5px rgb(174, 0, 255);
+    width: 30rem;
+    
+    align-items: center;
+    justify-content: center;
     
 }
