--- a/styles_bootstrap.css
+++ b/styles_bootstrap.css
@@ -1,13 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Borel&family=Montaga&family=Montserrat:wght@500&display=swap');
+*{
+    background-color: #212529;
+    padding: 0px;
+    margin: 0px;
+    font-size: 20px;
+}
 
 .index_logo{
     font-family: 'Borel', cursive;
     font-style: italic; 
     text-shadow: 1px 2px #7dc8fb; 
-    font-size:100%;
+    font-size:2rem;
     padding-bottom: 0px;
 
-    height: 35px;
+    height: 40px;
     /* border: 2px solid white; */
 }
 
@@ -48,12 +54,7 @@
     border-color: rgba(var(--bs-success-rgb), var(--bs-border-opacity)) !important;
   }
 
-*{
-    background-color: #212529;
-    padding: 0px;
-    margin: 0px;
 
-}
 
 li, h1, p,a, span,button, container-fluid, div, ul, nav, header, hr, body{
     background:local;
@@ -120,15 +121,75 @@ i{
     margin-right: 10px;
 }
 
-@media screen and (min-width: 769px){
+
+
+
+
+
+@media screen and (max-width: 1440px){
     i {
         scale: 1;
         margin-right: 30px;
 
     }
     .comp{
-        font-size: 18px;
+        font-size: 17px;
     }
+    p.card-text{
+        font-size: 1.4rem;
+        height: 70%;
+    }
+    .slider{
+        height: 25rem;
+    }
+    .slider-inner{
+        gap: 2rem;
+      
+    }
+    .block{
+        width:22rem;
+        padding:0.8rem;
+    }
+    .card-title{
+    
+        font-weight: 600;
+        font-size: 2rem;
+        
+    }
+
+}
+
+@media screen and (max-width: 1024px){
+    i {
+        scale: 1;
+        margin-right: 30px;
+
+    }
+    .comp{
+        font-size: 17px;
+    }
+    p.card-text{
+        font-size: 1rem;
+        height: 70%;
+    }
+    .slider{
+        height: 18rem;
+    }
+    .slider-inner{
+        gap: 2rem;
+      
+    }
+    .block{
+        width:16rem;
+        padding:0.8rem;
+    }
+    .card-title{
+    
+        font-weight: 600;
+        font-size: 1.5rem;
+        
+    }
+
 }
 
 @media screen and (max-width: 769px){
@@ -140,6 +201,28 @@ i{
     .comp{
         font-size: 17px;
     }
+    p.card-text{
+        font-size: 15px;
+        height: 70%;
+    }
+    .slider{
+        height: 15rem;
+    }
+    .slider-inner{
+        gap: 1rem;
+        height: 15rem;
+    }
+    .block{
+        width:14rem;
+        padding:0.8rem;
+    }
+    .card-title{
+    
+        font-weight: 600;
+        font-size: 1rem;
+        
+    }
+    
 }
 
 @media screen and (max-width: 426px){
@@ -150,6 +233,27 @@ i{
     }
     .comp{
         font-size: 14px;
+    }
+    p.card-text{
+        font-size: 15px;
+        height: 70%;
+    }
+    .slider{
+        height: 15rem;
+    }
+    .slider-inner{
+        gap: 1rem;
+        height: 15rem;
+    }
+    .block{
+        width:14rem;
+        padding:0.8rem;
+    }
+    .card-title{
+    
+        font-weight: 600;
+        font-size: 1rem;
+        
     }
 }
 
@@ -172,6 +276,29 @@ i{
     }
     .comp{
         font-size: 12px;
+    
+    }
+
+    p.card-text{
+        font-size: 13px;
+        height: 70%;
+    }
+    .slider{
+        height: 10rem;
+    }
+    .slider-inner{
+        gap: 1rem;
+       
+    }
+    .block{
+        width:8rem;
+        padding:0.5rem;
+    }
+    .card-title{
+    
+        font-weight: 600;
+        font-size: 0.8rem;
+        
     }
 }
 
